# focos

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs
include/Focos/: Focos.h
src/: main.rs
src/Focos/: Focos.c
tests/: AllTests.c  FocosTestRunner.c  FuncionesCTestRunner.c
tests/Focos/: FocosTest.c  FuncionesCTest.c
